--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,12 @@ android {
     productFlavors {
         "default" {
             isDefault true
+            applicationIdSuffix ".ei"
         }
         api29 {
             targetSdkVersion 29
             versionNameSuffix "-oldapi"
+            applicationIdSuffix ".ei"
         }
     }
 
